# diplomaDaniil

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  requirements.txt
application/: main_win.py  test_win.py
application/dependencies/: depends.py  design_style.py  schemas.py
display/: main_window.py  test_window.py
display/origin/: main_window.ui
static/files/: schema.json  style.qss
static/tests/: 1_1.json
