[tool.poetry]
name = "barakovskidaniildiplom"
version = "0.1.0"
description = ""
authors = ["fernandoveragul <valentingullll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
pyside6 = "^6.5.0"
pyinstaller = "^5.11.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
